fix: navigation control bottom  alignment for different mobile OS

--- a/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
+++ b/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
@@ -28,14 +28,38 @@
   background-color: rgb(255, 255, 255);
   border-radius: 50%;
   display: flex;
-  bottom: 106px;
-  right: 30px;
   width: 30px;
   height: 30px;
   align-items: center;
   justify-content: center;
-  @include xsPhoneView {
-    bottom: 220px;
-    right: 9px;
-  }
+}
+
+.layerToggleAndroid,
+.layerToggleIos {
+  right: 9px;
+}
+.layerToggleDesktop {
+  bottom: 105px;
+  right: 30px;
+}
+
+.layerToggleAndroid {
+  bottom: 162px;
+}
+
+.layerToggleIos {
+  bottom: 215px;
+}
+
+.mapContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.android :global(.maplibregl-control-container .maplibregl-ctrl-bottom-right) {
+  bottom: 85px;
+}
+
+.ios :global(.maplibregl-control-container .maplibregl-ctrl-bottom-right) {
+  bottom: 140px;
 }
